--- a/templates/loginview.html
+++ b/templates/loginview.html
@@ -132,6 +132,16 @@
     border-top: none; /* Remove the default footer border */
     border-radius: 0 0 10px 10px; /* Rounded corners, but only at the bottom */
 }
+.project .img {
+    height: 200px; /* Adjust the height to your preference */
+    overflow: hidden;
+}
+
+.project .img img {
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: cover;
+}
 
 
 </style>
@@ -177,6 +187,9 @@
                         {% endif %}
                         <p>{{ user.username }}</p>
                     </div>
+					<a class="dropdown-item" href="/upcoming-journeys" id="#">Upcoming Journeys</a>
+					<a class="dropdown-item" href="/ongoing-journeys" id="#">Ongoing Trips</a>
+					<a class="dropdown-item" href="/history-journeys" id="#">History</a>
                     <a class="dropdown-item" href="/viewprofileT">View Profile</a>
                     <a class="dropdown-item" href="/tupdate" id="#">Update Profile</a>
                     <div class="dropdown-divider"></div>
@@ -410,7 +423,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<span class="subheading">Best Destination</span>
             <h2 class="mb-4">Best Place to Travel</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>Choose Your Destination To Explore and we will Catch You There.</p>
 
 
 			<!-- Add a unique modal for each package -->
@@ -429,6 +442,7 @@
                     <h3>
                         <a href="/package/{{ package.id }}">{{ package.package_name }}</a>
                     </h3>
+					<h3 style="background-color: rgb(199, 21, 71);">{{ package.end_date }} is the Last Date for Booking</h3>
                     <div class="star d-flex clearfix">
                         <div class="mr-auto float-left">
                             <span class="ion-ios-star"></span>
