--- a/templates/adminreg.html
+++ b/templates/adminreg.html
@@ -81,6 +81,9 @@
         <a href="/drivers">Drivers</a> 
         <a href="/upload_package">Add Package</a>
         <a href="/view-packages">View Package</a>
+        <a href="/bookings">Upcoming Journeys</a>
+        <a href="/ongoing-bookings" id="logout-link">Ongoing Journeys</a>
+        <a href="/history-bookings">History Journeys</a>
         <a href="/logout" id="logout-link">Logout</a>
     </div>
     
