--- a/templates/view_package.html
+++ b/templates/view_package.html
@@ -139,7 +139,15 @@
     <div class="sidebar">
         <div class="profile-picture"></div>
         <a href="/admins" id="logout-link">Home</a>
-        <a href="/upload_package">Add Packages</a>
+        <a href="{% url 'user_list' %}">Users </a>  
+        <a href="/travellers">Travellers</a>
+        <a href="/drivers">Drivers</a> 
+        <a href="/upload_package">Add Package</a>
+        <a href="/view-packages">View Package</a>
+        <a href="/bookings">Upcoming Journeys</a>
+        <a href="/ongoing-bookings" id="logout-link">Ongoing Journeys</a>
+        <a href="/history-bookings">History Journeys</a>
+        <a href="/logout" id="logout-link">Logout</a> 
 
     </div>
     <div class="navbar">
