--- a/templates/edit_package.html
+++ b/templates/edit_package.html
@@ -399,8 +399,20 @@
                     <td>
                         <select id="status" name="status" required>
                             <option value="Running" {% if package.status == 'Running' %}selected{% endif %}>Running</option>
-                            <option value="Paused" {% if package.status == 'Paused' %}selected{% endif %}>Paused</option>
+                            <option value="Pending" {% if package.status == 'Pending' %}selected{% endif %}>Pending</option>
                         </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="feed">Feed</label>
+                    </td>
+                    <td>
+                        <select id="accommodation" name="feed" required>
+                            <option value="Save">Save</option>
+                            <option value="Post">Post</option>
+                        </select>
+                        <span id="accommodation-validation-message" class="validation-message"></span>
                     </td>
                 </tr>
             </table>
