--- a/templates/ongoing_journeys.html
+++ b/templates/ongoing_journeys.html
@@ -116,7 +116,7 @@
             </div>
         </div>
         {% empty %}
-        <p class="no-journeys">Ongoing journeys not found.</p>
+        <p class="no-journeys">OOngoing journeys not found.</p>
         {% endfor %}
 </div>
     
