--- a/templates/upcoming_journeys.html
+++ b/templates/upcoming_journeys.html
@@ -110,14 +110,29 @@
                     <h5 class="card-title">{{ package_with_images.package.package_name }}</h5>
                     <p class="card-text">Start Date: {{ package_with_images.package.start_date }}</p>
                     <p class="card-text">End Date: {{ package_with_images.package.end_date }}</p>
+                    {% for package_with_images in packages_with_images %}
+                    <!-- Other package details -->
+                    <p class="card-text">
+                        <a href="{% url 'passenger_details' package_with_images.package.id %}" class="view-details-link">
+                            View Passengers {{ package_with_images.booking.passenger_limit }}
+                        </a>
+                    </p>
+                {% endfor %}
                     <!-- Add more details as needed -->
     
-                    {% if user.is_authenticated %}
+                {% if user.is_authenticated %}
                     <form method="POST" action="{% url 'cancel_booking' package_id=package_with_images.package.id %}">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-danger">Cancel Booking</button>
                     </form>
-                    {% endif %}
+                    {% if package_with_images.booking and package_with_images.booking.status == 'Confirmed' %}
+                    <!-- Display a payment button only if the booking status is "Confirmed" -->
+                    <form method="POST" action="{% url 'payment' booking_id=package_with_images.booking.id %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-success">Make Payment</button>
+                    </form>
+                {% endif %}
+                {% endif %}
                 </div>
             </div>
         </div>
