--- a/templates/loginview.html
+++ b/templates/loginview.html
@@ -10,7 +10,9 @@
   <title>NIWITRAVELS</title>
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-
+   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+ 
    <!-- Bootstrap JavaScript and Dependencies (jQuery and Popper.js) -->
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
@@ -18,8 +20,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="{% static 'Niwi_Travels/images/favicon.ico' %}" type="image/x-icon">
   
-  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
 
  <link rel="stylesheet" href="{% static 'Niwi_Travels/css/open-iconic-bootstrap.min.css' %}"> 
@@ -207,7 +207,6 @@
 	  	<img src="{% static 'Niwi_Travels/images/blob-shape-3.svg' %}" class="svg-blob" alt="Colorlib Free Template">
 		
 		  <div class="home-slider owl-carousel">
-			
 	      <div class="slider-item">
 	      	<div class="overlay"></div>
 	        <div class="container-fluid p-0">
@@ -217,12 +216,12 @@
 	          			<div class="overlay"></div>
 	          		</div>
 	          		<div class="bg-primary">
-		          		<div class="vr"><span class="pl-3 py-4" style="background-image: url('{% static 'Niwi_Travels/images/bg_1-1.jpg' %}');">Greece</span></div>
+		          		<div class="vr"><span class="pl-3 py-4" style="background-image: url('{% static 'Niwi_Travels/images/bg_1-1.jpg' %}');">India</span></div>
 	          		</div>
-	          	</div>
+	          	  </div>
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
-		          		<span class="subheading pl-5">Discover Greece</span>
+		          		<span class="subheading pl-5">Discover Kerala</span>
 			            <h1 class="mb-4 mt-3">Explore Your Travel Destinations like never before</h1>
 			            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
 			            
@@ -241,11 +240,11 @@
 	          		<div class="img" style="background-image:url({% static 'Niwi_Travels/images/bg_2.jpg' %});">
 	          			<div class="overlay"></div>
 	          		</div>
-	          		<div class="vr"><span class="pl-3 py-4" style="background-image: url({% static 'Niwi_Travels/images/bg_2-2.jpg' %});">Africa</span></div>
+	          		<div class="vr"><span class="pl-3 py-4" style="background-image: url({% static 'Niwi_Travels/images/bg_2-2.jpg' %});">Kerala</span></div>
 	          	</div>
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
-		          		<span class="subheading pl-5">Discover Africa</span>
+		          		<span class="subheading pl-5">Discover Gods Own Countr</span>
 			            <h1 class="mb-4 mt-3">Never Stop Exploring</span></h1>
 			            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country.</p>
 			            
@@ -258,87 +257,7 @@
 	    </div>
     </section>
 
-    <section class="ftco-section ftco-no-pb ftco-no-pt">
-    	<div class="container">
-    		<div class="row justify-content-center pb-0 pb-mb-5 pt-5 pt-md-0">
-          <div class="col-md-12 heading-section ftco-animate">
-          	<span class="subheading"></span>
-            <h2 class="mb-4">Where do you want to go?</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-          </div>
-        </div>
-	    	<div class="row">
-					<div class="col-md-12">
-						<div class="search-wrap-1 ftco-animate p-4">
-							<form action="#" class="search-property-1">
-		        		<div class="row">
-		        			<div class="col-lg align-items-end">
-		        				<div class="form-group">
-		        					<label for="#">Destination</label>
-		          				<div class="form-field">
-		          					<div class="icon"><span class="ion-ios-search"></span></div>
-				                <input type="text" class="form-control" placeholder="Search place">
-				              </div>
-			              </div>
-		        			</div>
-		        			<div class="col-lg align-items-end">
-		        				<div class="form-group">
-		        					<label for="#">Check-in date</label>
-		        					<div class="form-field">
-		          					<div class="icon"><span class="ion-ios-calendar"></span></div>
-				                <input type="text" class="form-control checkin_date" placeholder="Check In Date">
-				              </div>
-			              </div>
-		        			</div>
-		        			<div class="col-lg align-items-end">
-		        				<div class="form-group">
-		        					<label for="#">Check-out date</label>
-		        					<div class="form-field">
-		          					<div class="icon"><span class="ion-ios-calendar"></span></div>
-				                <input type="text" class="form-control checkout_date" placeholder="Check Out Date">
-				              </div>
-			              </div>
-		        			</div>
-		        			<div class="col-lg align-items-end">
-		        				<div class="form-group">
-		        					<label for="#">Price Limit</label>
-		        					<div class="form-field">
-		          					<div class="select-wrap">
-		                      <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-		                      <select name="" id="" class="form-control">
-		                        <option value="">$5,000</option>
-		                        <option value="">$10,000</option>
-		                        <option value="">$50,000</option>
-		                        <option value="">$100,000</option>
-		                        <option value="">$200,000</option>
-		                        <option value="">$300,000</option>
-		                        <option value="">$400,000</option>
-		                        <option value="">$500,000</option>
-		                        <option value="">$600,000</option>
-		                        <option value="">$700,000</option>
-		                        <option value="">$800,000</option>
-		                        <option value="">$900,000</option>
-		                        <option value="">$1,000,000</option>
-		                        <option value="">$2,000,000</option>
-		                      </select>
-		                    </div>
-				              </div>
-			              </div>
-		        			</div>
-		        			<div class="col-lg align-self-end">
-		        				<div class="form-group">
-		        					<div class="form-field">
-				                <input type="submit" value="Search" class="form-control btn btn-primary">
-				              </div>
-			              </div>
-		        			</div>
-		        		</div>
-		        	</form>
-		        </div>
-					</div>
-	    	</div>
-	    </div>
-    </section>
+    
 		
 		<section class="ftco-section ftco-services-2" id="services-section">
 			<div class="container">
@@ -415,8 +334,21 @@
     	</div>
     </section>
 
+<br>
+	<section class="ftco-section ftco-no-pb ftco-no-pt">
+    	<div class="container">
+    		<div class="row justify-content-center pb-0 pb-mb-5 pt-5 pt-md-0">
+          <div class="col-md-12 heading-section ftco-animate">
+          	<span class="subheading"></span>
+            <h2 class="mb-4">Where do you want to go?</h2>
+            <p>Easily find your favourite destination by searching here.</p>
+          </div>
+        </div>
 
-
+									<div class="search-container" style="box-shadow: #333;">
+										<input type="text" id="search-input" placeholder="Search Here" />
+									</div>
+    </section>
     <section class="ftco-section" id="destination-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
@@ -429,7 +361,7 @@
 			<!-- Add a unique modal for each package -->
       <div class="row">
         {% for package in running_packages %}
-        <div class="col-md-6 col-lg-4 ftco-animate">
+        <div class="col-md-6 col-lg-4 ftco-animate" data-destination="{{ package.destination }}">
             <div class="project">
                 <div class="img">
                     <a href="/package/{{ package.id }}">
@@ -437,12 +369,15 @@
                     </a>
                 </div>
                 <div class="text">
-                    <h4 class="price">₹{{ package.price }}</h4>
+                    <h4 class="price">₹{{ package.price }} per head</h4>
                     <span>{{ package.duration }} Days Tour</span>
                     <h3>
                         <a href="/package/{{ package.id }}">{{ package.package_name }}</a>
                     </h3>
-					<h3 style="background-color: rgb(199, 21, 71);">{{ package.end_date }} is the Last Date for Booking</h3>
+                    <span>Starting Date: {{ package.start_date }}</span><br>
+                    <span>End Date: {{ package.end_date }}</span>
+
+					<h3 style="background-color: rgb(199, 21, 71);">{{ package.booking_deadline }} is the Last Date for Booking</h3>
                     <div class="star d-flex clearfix">
                         <div class="mr-auto float-left">
                             <span class="ion-ios-star"></span>
@@ -452,7 +387,7 @@
                             <span class="ion-ios-star"></span>
                         </div>
                         <div class="float-right">
-                            <span class="rate"><a href="#">({{ package.availability }})</a></span>
+                            <span class="rate">{{ package.availability }} number of seats avaiable. </span>
                         </div>
                     </div>
                 </div>
@@ -985,6 +920,30 @@
 		});
 	});
 </script>
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- Include jQuery library -->
+
+<script>
+  $(document).ready(function() {
+    // Listen for keyup events on the search input field
+    $('#search-input').on('keyup', function() {
+      var searchValue = $(this).val().toLowerCase(); // Get the entered search value
+
+      // Loop through each package div and check if package name contains the search value
+      $('.project').each(function() {
+        var packageName = $(this).find('h3 a').text().toLowerCase();
+
+        if (packageName.indexOf(searchValue) > -1) {
+          $(this).show(); // Show the package if it matches the search value
+        } else {
+          $(this).hide(); // Hide the package if it does not match the search value
+        }
+      });
+    });
+  });
+</script>
+
 
   </body>
 
