--- a/templates/register.html
+++ b/templates/register.html
@@ -128,7 +128,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="registration-box">  
-                    <a href="/tregister" class="=registration-link">Register as the Traveller</a>
+                    <a href="/tregister" class="registration-link">Register as the Traveller</a>
                  
                 </div>
             </div>
