--- a/templates/package_detail.html
+++ b/templates/package_detail.html
@@ -188,25 +188,26 @@ p {
             <h1>Package Details</h1>
             <h2>{{ package.package_name }}</h2>
             <p>
-                Explore the breathtaking destination of {{ package.destination }} on an unforgettable journey. 
-                You can enjoy this incredible adventure for just ₹{{ package.price }}. 
-                The journey begins on {{ package.start_date }} and concludes on {{ package.end_date }}. 
-                Over the course of {{ package.duration }} days, you'll experience a mix of excitement and discovery.
+                Explore the breathtaking destination of <span style="color: green; font-weight: bold;">{{ package.destination }}</span> on an unforgettable journey. 
+                You can enjoy this incredible adventure for just ₹<span style="color: blue;">{{ package.price }}</span>. 
+                The journey begins on <span style="color: red;">{{ package.start_date }}</span> and concludes on <span style="color: red;">{{ package.end_date }}</span>. 
+                Over the course of <span style="color: purple;">{{ package.duration }}</span> days, you'll experience a mix of excitement and discovery.
             </p>
             <p>
-                During your trip, you'll be accommodated in {{ package.accommodation }} lodgings, 
-                and your transportation will be provided with {{ package.transportation }}. 
-                You'll have the opportunity to partake in a wide array of {{ package.activities }}.
+                During your trip, you'll be accommodated in <span style="color: rgb(18, 16, 16);">{{ package.accommodation }}</span> lodgings, 
+                and your transportation will be provided with <span style="color: orange;">{{ package.transportation }}</span>. 
+                You'll have the opportunity to partake in a wide array of <span style="color: teal;">{{ package.activities }}</span>.
             </p>
             <p>
-                Your journey includes {{ package.inclusions }}, ensuring a memorable experience. 
-                Please note that {{ package.exclusions }} are not covered.
+                Your journey includes <span style="color: navy;">{{ package.inclusions }}</span>, ensuring a memorable experience. 
+                Please note that <span style="color: maroon;">{{ package.exclusions }}</span> are not covered.
             </p>
             <p>
-                The adventure falls into the {{ package.category }} category, 
-                and there are only {{ package.availability }} spots available, so be sure to book soon. 
-                Secure your place by {{ package.booking_deadline }} and review our {{ package.cancellation_policy }} for peace of mind.
+                The adventure falls into the <span style="color: darkslategray;">{{ package.category }}</span> category, 
+                and there are only <span style="color: darkred;">{{ package.availability }}</span> spots available, so be sure to book soon. 
+                Secure your place by <span style="color: darkblue;">{{ package.booking_deadline }}</span> and review our <span style="color: darkcyan;">{{ package.cancellation_policy }}</span> for peace of mind.
             </p>
+            
             
             
 
