--- a/templates/package_requests.html
+++ b/templates/package_requests.html
@@ -167,7 +167,7 @@ tr:hover {
         <a href="/upload_package">Add Package</a>
         <a href="/view-packages">View Package</a>
         <a href="/bookings">Verification Requests</a>
-        <a href="/booking_list">Verified Bookings</a>
+        <a href="/verified_bookings">Verified Bookings</a>
         <a href="/ongoing-bookings" id="logout-link">Ongoing Journeys</a>
         <a href="/history-bookings">History Journeys</a>
         <a href="/logout" id="logout-link">Logout</a> 
@@ -177,7 +177,7 @@ tr:hover {
         <p>This is where you can manage users, packages, and ongoing trips.</p>
     </div>
     <div class="main-content">
-    <h1>Upcoming Journeys of Travellers</h1>
+    <h1>Verification Requests for the Travel Packages</h1>
     </div>
     
     <div class="table-container">
