--- a/templates/upcoming_bookings.html
+++ b/templates/upcoming_bookings.html
@@ -167,7 +167,7 @@ tr:hover {
         <a href="/upload_package">Add Package</a>
         <a href="/view-packages">View Package</a>
         <a href="/bookings">Verification Requests</a>
-        <a href="/booking_list">Verified Bookings</a>
+        <a href="/verified_bookings">Verified Bookings</a>
         <a href="/ongoing-bookings" id="logout-link">Ongoing Journeys</a>
         <a href="/history-bookings">History Journeys</a>
         <a href="/logout" id="logout-link">Logout</a> 
@@ -177,7 +177,7 @@ tr:hover {
         <p>This is where you can manage users, packages, and ongoing trips.</p>
     </div>
     <div class="main-content">
-    <h1>Upcoming Journeys of Travellers</h1>
+    <h1>Verification Requests for the Travel Packages</h1>
     </div>
     
     <div class="table-container">
@@ -189,8 +189,6 @@ tr:hover {
                 </a>
                 <div class="card-body">
                     <h5 class="card-title">{{ package.package_name }}</h5>
-                    <p class="card-text">₹{{ package.price }} per head</p>
-                    <p class="card-text">{{ package.duration }} Days Tour</p>
                     <p class="card-text">{{ package.booking_deadline }} is the Last Date for Booking<br>{{ package.start_date }} is the Starting date.<br> {{ package.end_date }} is the end date.</p>
                     <div class="star d-flex clearfix">
                         <div class="mr-auto float-left">
